build/log/idf_py_stdout_output_27352
[1/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
D:/ESP32_IDF_ESPRESSIF/Projects/BME280_SDcard/main/main.c: In function 'init_sd_card':
D:/ESP32_IDF_ESPRESSIF/Projects/BME280_SDcard/main/main.c:58:78: warning: passing argument 4 of 'esp_vfs_fat_sdmmc_mount' from incompatible pointer type [-Wincompatible-pointer-types]
   58 |     esp_err_t err = esp_vfs_fat_sdmmc_mount("/SD card", &host, &slot_config, &slot_config, &card);
      |                                                                              ^~~~~~~~~~~~
      |                                                                              |
      |                                                                              sdmmc_slot_config_t *
In file included from D:/ESP32_IDF_ESPRESSIF/Projects/BME280_SDcard/main/main.c:25:
D:/ESP32_IDF_ESPRESSIF/components/fatfs/vfs/esp_vfs_fat.h:142:39: note: expected 'const esp_vfs_fat_mount_config_t *' but argument is of type 'sdmmc_slot_config_t *'
  142 |     const esp_vfs_fat_mount_config_t* mount_config,
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~
D:/ESP32_IDF_ESPRESSIF/Projects/BME280_SDcard/main/main.c:45:38: warning: unused variable 'mount_config' [-Wunused-variable]
   45 |     esp_vfs_fat_sdmmc_mount_config_t mount_config =
      |                                      ^~~~~~~~~~~~
[2/11] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\ESP32_IDF_ESPRESSIF\Projects\BME280_SDcard\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.1_py3.11_env\Scripts\python.exe D:/ESP32_IDF_ESPRESSIF/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/ESP32_IDF_ESPRESSIF/Projects/BME280_SDcard/build/bootloader/bootloader.bin"
Bootloader binary size 0x6810 bytes. 0x7f0 bytes (7%) free.
[3/9] Building C object esp-idf/bme280/CMakeFiles/__idf_bme280.dir/bme.c.obj
FAILED: esp-idf/bme280/CMakeFiles/__idf_bme280.dir/bme.c.obj 
ccache C:\Users\tquoc\.rustup\toolchains\esp\xtensa-esp32-elf\esp-12.2.0_20230208\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.1.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/ESP32_IDF_ESPRESSIF/Projects/BME280_SDcard/build/config -ID:/ESP32_IDF_ESPRESSIF/Projects/BME280_SDcard/component/bme280 -ID:/ESP32_IDF_ESPRESSIF/components/newlib/platform_include -ID:/ESP32_IDF_ESPRESSIF/components/freertos/FreeRTOS-Kernel/include -ID:/ESP32_IDF_ESPRESSIF/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/ESP32_IDF_ESPRESSIF/components/freertos/esp_additions/include/freertos -ID:/ESP32_IDF_ESPRESSIF/components/freertos/esp_additions/include -ID:/ESP32_IDF_ESPRESSIF/components/freertos/esp_additions/arch/xtensa/include -ID:/ESP32_IDF_ESPRESSIF/components/esp_hw_support/include -ID:/ESP32_IDF_ESPRESSIF/components/esp_hw_support/include/soc -ID:/ESP32_IDF_ESPRESSIF/components/esp_hw_support/include/soc/esp32 -ID:/ESP32_IDF_ESPRESSIF/components/esp_hw_support/port/esp32/. -ID:/ESP32_IDF_ESPRESSIF/components/esp_hw_support/port/esp32/private_include -ID:/ESP32_IDF_ESPRESSIF/components/heap/include -ID:/ESP32_IDF_ESPRESSIF/components/log/include -ID:/ESP32_IDF_ESPRESSIF/components/soc/include -ID:/ESP32_IDF_ESPRESSIF/components/soc/esp32 -ID:/ESP32_IDF_ESPRESSIF/components/soc/esp32/include -ID:/ESP32_IDF_ESPRESSIF/components/hal/esp32/include -ID:/ESP32_IDF_ESPRESSIF/components/hal/include -ID:/ESP32_IDF_ESPRESSIF/components/hal/platform_port/include -ID:/ESP32_IDF_ESPRESSIF/components/esp_rom/include -ID:/ESP32_IDF_ESPRESSIF/components/esp_rom/include/esp32 -ID:/ESP32_IDF_ESPRESSIF/components/esp_rom/esp32 -ID:/ESP32_IDF_ESPRESSIF/components/esp_common/include -ID:/ESP32_IDF_ESPRESSIF/components/esp_system/include -ID:/ESP32_IDF_ESPRESSIF/components/esp_system/port/soc -ID:/ESP32_IDF_ESPRESSIF/components/esp_system/port/include/private -ID:/ESP32_IDF_ESPRESSIF/components/xtensa/include -ID:/ESP32_IDF_ESPRESSIF/components/xtensa/esp32/include -ID:/ESP32_IDF_ESPRESSIF/components/lwip/include -ID:/ESP32_IDF_ESPRESSIF/components/lwip/include/apps -ID:/ESP32_IDF_ESPRESSIF/components/lwip/include/apps/sntp -ID:/ESP32_IDF_ESPRESSIF/components/lwip/lwip/src/include -ID:/ESP32_IDF_ESPRESSIF/components/lwip/port/include -ID:/ESP32_IDF_ESPRESSIF/components/lwip/port/freertos/include -ID:/ESP32_IDF_ESPRESSIF/components/lwip/port/esp32xx/include -ID:/ESP32_IDF_ESPRESSIF/components/lwip/port/esp32xx/include/arch -ID:/ESP32_IDF_ESPRESSIF/components/driver/include -ID:/ESP32_IDF_ESPRESSIF/components/driver/deprecated -ID:/ESP32_IDF_ESPRESSIF/components/driver/analog_comparator/include -ID:/ESP32_IDF_ESPRESSIF/components/driver/dac/include -ID:/ESP32_IDF_ESPRESSIF/components/driver/gpio/include -ID:/ESP32_IDF_ESPRESSIF/components/driver/gptimer/include -ID:/ESP32_IDF_ESPRESSIF/components/driver/i2c/include -ID:/ESP32_IDF_ESPRESSIF/components/driver/i2s/include -ID:/ESP32_IDF_ESPRESSIF/components/driver/ledc/include -ID:/ESP32_IDF_ESPRESSIF/components/driver/mcpwm/include -ID:/ESP32_IDF_ESPRESSIF/components/driver/parlio/include -ID:/ESP32_IDF_ESPRESSIF/components/driver/pcnt/include -ID:/ESP32_IDF_ESPRESSIF/components/driver/rmt/include -ID:/ESP32_IDF_ESPRESSIF/components/driver/sdio_slave/include -ID:/ESP32_IDF_ESPRESSIF/components/driver/sdmmc/include -ID:/ESP32_IDF_ESPRESSIF/components/driver/sigma_delta/include -ID:/ESP32_IDF_ESPRESSIF/components/driver/spi/include -ID:/ESP32_IDF_ESPRESSIF/components/driver/temperature_sensor/include -ID:/ESP32_IDF_ESPRESSIF/components/driver/touch_sensor/include -ID:/ESP32_IDF_ESPRESSIF/components/driver/twai/include -ID:/ESP32_IDF_ESPRESSIF/components/driver/uart/include -ID:/ESP32_IDF_ESPRESSIF/components/driver/usb_serial_jtag/include -ID:/ESP32_IDF_ESPRESSIF/components/driver/touch_sensor/esp32/include -ID:/ESP32_IDF_ESPRESSIF/components/esp_pm/include -ID:/ESP32_IDF_ESPRESSIF/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=D:/ESP32_IDF_ESPRESSIF/Projects/BME280_SDcard=. -fmacro-prefix-map=D:/ESP32_IDF_ESPRESSIF=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/bme280/CMakeFiles/__idf_bme280.dir/bme.c.obj -MF esp-idf\bme280\CMakeFiles\__idf_bme280.dir\bme.c.obj.d -o esp-idf/bme280/CMakeFiles/__idf_bme280.dir/bme.c.obj -c D:/ESP32_IDF_ESPRESSIF/Projects/BME280_SDcard/component/bme280/bme.c
D:/ESP32_IDF_ESPRESSIF/Projects/BME280_SDcard/component/bme280/bme.c: In function 'bme280_reader_task':
D:/ESP32_IDF_ESPRESSIF/Projects/BME280_SDcard/component/bme280/bme.c:263:17: error: expected statement before ')' token
  263 |                 );
      |                 ^
ninja: build stopped: subcommand failed.
